[package]
name    = "v-element"
version = "0.1.0"
authors = ["Danilo Guanabara <danguafer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde        = { version = "1.0.104", features = [ "derive" ] }
serde_json   = "1.0.48"
wasm-bindgen = "0.2.58"
paste        = "0.1.8"

[dependencies.web-sys]
version  = "0.3.35"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
    "NamedNodeMap",
    "Attr",
    "console"
]