[package]
name = "web-component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Node", "Element", "HtmlElement", "HtmlTemplateElement", "ShadowRoot", "ShadowRootInit", "ShadowRootMode"] }
concat-idents = "1.1.3"