[package]
name = "web-component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
importer = []

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
async-trait = "0.1"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Node", "Element", "HtmlElement", "HtmlTemplateElement", "ShadowRoot", "ShadowRootInit", "ShadowRootMode"] }
concat-idents = "1.1.3"