[package]
name = "clock"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
async-trait = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "HtmlCanvasElement", "CanvasRenderingContext2d", "Response", "Window", "Document", "Node", "Element", "HtmlElement", "HtmlTemplateElement", "ShadowRoot", "ShadowRootInit", "ShadowRootMode"] }
web-component = { path = "../../web-component" }