[package]
name    = "web-clock"
version = "0.1.0"
authors = ["Danilo Guanabara <danguafer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde         = { version = "1.0.104", features = [ "derive" ] }
serde_json    = "1.0.48"
wasm-bindgen  = "0.2.58"
paste         = "0.1.8"
web-component = "0.1.5"
js-sys        = { version = "0.3.28" }

[dependencies.web-sys]
version  = "0.3.35"
features = [
    "Window",
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
    "NamedNodeMap",
    "Attr",
    "console",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement"
]
